--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -17,6 +17,7 @@
 
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/primeui/themes/omega/theme.css")" />
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/primeui/primeui-ng-all.min.css")" />
+    <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/leaflet/dist/leaflet.css")" />
 
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/app.css")"/>
 
@@ -26,6 +27,7 @@
     <script src="@routes.Assets.versioned("lib/systemjs/dist/system.src.js")"></script>
 
     <script src="@routes.Assets.versioned("lib/vis/dist/vis.min.js")"></script>
+    <script src="@routes.Assets.versioned("lib/leaflet/dist/leaflet.js")"></script>
 
     <script src="@routes.Assets.versioned("lib/primeui/primeui-ng-all.min.js")"></script>
 
