--- a/app/views/partials/mobilise/content.scala.html
+++ b/app/views/partials/mobilise/content.scala.html
@@ -13,10 +13,7 @@
             <i class="fa fa-plus" aria-hidden="true"></i>
         </button>
         <button class="btn btn-secondary">
-            <i class="fa fa-angle-right" aria-hidden="true"></i>
-        </button>
-        <button class="btn btn-secondary">
-            <i class="fa fa-angle-double-right" aria-hidden="true"></i>
+            <i class="fa fa-check" aria-hidden="true"></i>
         </button>
     </div>
 </nav>
