AL-59: Implmenent chart visualisation using plotly.js

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -28,6 +28,7 @@
 
     <script src="@routes.Assets.versioned("lib/vis/dist/vis.min.js")"></script>
     <script src="@routes.Assets.versioned("lib/leaflet/dist/leaflet.js")"></script>
+    <script src="@routes.Assets.versioned("lib/plotly.js/dist/plotly.min.js")"></script>
 
     <script src="@routes.Assets.versioned("lib/primeui/primeui-ng-all.min.js")"></script>
 
