--- a/app/views/partials/visualise/vistabs.scala.html
+++ b/app/views/partials/visualise/vistabs.scala.html
@@ -2,7 +2,7 @@
 <div class="fill">
     <tabset class="flex-panel-parent">
         <tab  class="flex-panel-parent" *ngFor="let tabz of uiStateStore.store.visTabs"
-        [heading]="'map'"
+        [heading]="tabz.visType"
         [active]="tabz.active"
         (select)="tabz.active = true"
         (deselect)="tabz.active = false"
@@ -11,6 +11,7 @@
         (removed)="removeTabHandler(tabz)">
             <div class="flex-panel flex-panel-parent" [ngSwitch]="tabz.visType">
                 <map class="flex-panel" [reload]= "provenances | async" [resize]= "uiStateStore.resizeView | async" *ngSwitchCase="'map'"></map>
+                <chart class="flex-panel overflow" [reload]= "provenances | async" *ngSwitchCase="'chart'"></chart>
             </div>
         </tab>
     </tabset>
