--- a/app/views/partials/analyse/view.scala.html
+++ b/app/views/partials/analyse/view.scala.html
@@ -1,21 +1,24 @@
 @()
-<nav class="navbar navbar-light bg-faded main-header">
-    <ul class="nav navbar-nav">
-        <li class="nav-item active">
-            <span dropdown>
-                <a href id="simple-dropdown" dropdownToggle >flow</a>
-                <ul class="dropdown-menu" dropdownMenu aria-labelledby="simple-dropdown">
-                    <li *ngFor="let choice of templates" (click)="selectTemplate($event, choice)">
-                        <a class="dropdown-item" href="#">{{choice.name}}</a>
-                    </li>
-                </ul>
-            </span>
-        </li>
-    </ul>
-</nav>
+@*<nav class="navbar navbar-light bg-faded main-header">*@
+@*<ul class="nav navbar-nav">*@
+@*<li class="nav-item active">*@
+@*<span dropdown>*@
+@*<a href id="simple-dropdown" dropdownToggle >flow</a>*@
+@*<ul class="dropdown-menu" dropdownMenu aria-labelledby="simple-dropdown">*@
+@*<li *ngFor="let choice of templates" (click)="selectTemplate($event, choice)">*@
+@*<a class="dropdown-item" href="#">{{choice.name}}</a>*@
+@*</li>*@
+@*</ul>*@
+@*</span>*@
+@*</li>*@
+@*</ul>*@
+@*</nav>*@
 
-<modal #dialog="dialog"></modal>
+@*<modal #dialog="dialog"></modal>*@
 
-<flow-tabs class="flex-panel" [addFlowInstance]="uiStateStore.flowInstanceToAdd | async"></flow-tabs>
+<flow-tabs #flowTabbedPanel class="flex-panel" [addFlowInstance]="uiStateStore.flowInstanceToAdd | async"></flow-tabs>
 
 
+<p-dialog header="Templates"  width="800" [(visible)]="display">
+    <flow-entity></flow-entity>
+</p-dialog>
