--- a/app/views/partials/mobilise/content.scala.html
+++ b/app/views/partials/mobilise/content.scala.html
@@ -1,44 +1,44 @@
 @()
-<nav class="navbar navbar-light bg-faded main-header" *ngIf="hasResults()">
-    <ul class="nav navbar-nav">
-        <li class="nav-item active">
-            <p-dropdown [options]="rowOptions" [(ngModel)]="selectedRowOption"></p-dropdown>
-        </li>
-        <li class="nav-item active">
-            <p-dropdown [options]="formatOptions" [(ngModel)]="selectedFormatOption"></p-dropdown>
-        </li>
-    </ul>
-    <div class="pull-xs-right">
-        <button class="btn btn-secondary" (click)="showProcessorOverlay()">
-            <i class="fa fa-plus" aria-hidden="true"></i>
-        </button>
-        <button class="btn btn-secondary">
-            <i class="fa fa-check" aria-hidden="true"></i>
-        </button>
-    </div>
-</nav>
+@*<nav class="navbar navbar-light bg-faded main-header" *ngIf="hasResults()">*@
+    @*<ul class="nav navbar-nav">*@
+        @*<li class="nav-item active">*@
+            @*<p-dropdown [options]="rowOptions" [(ngModel)]="selectedRowOption"></p-dropdown>*@
+        @*</li>*@
+        @*<li class="nav-item active">*@
+            @*<p-dropdown [options]="formatOptions" [(ngModel)]="selectedFormatOption"></p-dropdown>*@
+        @*</li>*@
+    @*</ul>*@
+    @*<div class="pull-xs-right">*@
+        @*<button class="btn btn-secondary" (click)="showProcessorOverlay()">*@
+            @*<i class="fa fa-plus" aria-hidden="true"></i>*@
+        @*</button>*@
+        @*<button class="btn btn-secondary">*@
+            @*<i class="fa fa-check" aria-hidden="true"></i>*@
+        @*</button>*@
+    @*</div>*@
+@*</nav>*@
 
-<div class="flex-panel table-container" *ngIf="hasResults()">
-    <div class="flex-row-parent">
-        <div class="flex-panel-30 padding" *ngIf="hasActions()">
-            <p-dataTable  [value]="actions"  scrollHeight="200px" scrollWidth="100%">
-                <p-column field="label" header="action"></p-column>
-            </p-dataTable>
-        </div>
-        <div class="overflow padding" [ngClass]="{'flex-panel-70': hasActions(), 'flex-panel': !hasActions()}">
-            <p-dataTable   [value]="results" scrollable="true" scrollWidth="200%">
-                <p-column styleClass="info-column" [style]="{'width':'10px'}">
-                    <template let-result="rowData">
-                        <i class="fa fa-info-circle" aria-hidden="true" tooltipPlacement="right" tooltip="id: {{result.id}}"></i>
-                    </template>
-                </p-column>
-                <p-column  *ngFor="let col of columns"  [field]="col" [header]="col" [style]="{'width':'100px'}"></p-column>
-            </p-dataTable>
-        </div>
-    </div>
-</div>
+@*<div class="flex-panel table-container" *ngIf="hasResults()">*@
+    @*<div class="flex-row-parent">*@
+        @*<div class="flex-panel-30 padding" *ngIf="hasActions()">*@
+            @*<p-dataTable  [value]="actions"  scrollHeight="200px" scrollWidth="100%">*@
+                @*<p-column field="label" header="action"></p-column>*@
+            @*</p-dataTable>*@
+        @*</div>*@
+        @*<div class="overflow padding" [ngClass]="{'flex-panel-70': hasActions(), 'flex-panel': !hasActions()}">*@
+            @*<p-dataTable   [value]="results" scrollable="true" scrollWidth="200%">*@
+                @*<p-column styleClass="info-column" [style]="{'width':'10px'}">*@
+                    @*<template let-result="rowData">*@
+                        @*<i class="fa fa-info-circle" aria-hidden="true" tooltipPlacement="right" tooltip="id: {{result.id}}"></i>*@
+                    @*</template>*@
+                @*</p-column>*@
+                @*<p-column  *ngFor="let col of columns"  [field]="col" [header]="col" [style]="{'width':'100px'}"></p-column>*@
+            @*</p-dataTable>*@
+        @*</div>*@
+    @*</div>*@
+@*</div>*@
 
-<modal #dialog="dialog"></modal>
+@*<modal #dialog="dialog"></modal>*@
 
-<processor-panel #poverlay="poverlay"  [mobiliseActions]="actions"></processor-panel>
+@*<processor-panel #poverlay="poverlay"  [mobiliseActions]="actions"></processor-panel>*@
 
