--- a/app/views/partials/mobilise/processorpanel.scala.html
+++ b/app/views/partials/mobilise/processorpanel.scala.html
@@ -1,40 +1,40 @@
 @()
-<div bsModal #lgModal="bs-modal"
-class="modal fade overlay"
-tabindex="-1"
-role="dialog"
-aria-labelledby="myLargeModalLabel"
-aria-hidden="true"
-xmlns="http://www.w3.org/1999/html">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content flex-panel-parent">
-            <div class="modal-header">
-                <button type="button" class="close" (click)="lgModal.hide()" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                <h4 class="modal-title">Select / Configure Processor</h4>
-            </div>
-            <div class="modal-body flex-panel flex-panel-parent">
-                <div class="inner-addon right-addon p-search padding">
-                    <i class="fa fa-search" aria-hidden="true"></i>
-                    <input type="text" pInputText class="form-control p-search" />
-                </div>
-                <div class="flex-row-parent flex-panel">
-                    <div class="flex-panel-30 padding flex-panel-parent" >
-                        <p-listbox [options]="processors" [(ngModel)]="selectedProcessor" class="flex-panel hfill" [style]="{'width':'100%', 'height':'100%'}"></p-listbox>
-                    </div>
-                    <div class="flex-panel-70 padding well well-lg flex-panel-parent">
-                        <configure-processor class="flex-panel hfill" ></configure-processor>
-                    </div>
-                </div>
-            </div>
-            <div >
-                <p-toolbar >
-                    <div class="ui-toolbar-group-left" >
-                        <button pButton type="text" label="Add" icon="fa-plus" (click)="addProcessor()" [disabled]="!isProcessorSelected()"></button>
-                    </div>
-                </p-toolbar>
-            </div>
-        </div>
-    </div>
-</div>
+@*<div bsModal #lgModal="bs-modal"*@
+@*class="modal fade overlay"*@
+@*tabindex="-1"*@
+@*role="dialog"*@
+@*aria-labelledby="myLargeModalLabel"*@
+@*aria-hidden="true"*@
+@*xmlns="http://www.w3.org/1999/html">*@
+    @*<div class="modal-dialog modal-lg">*@
+        @*<div class="modal-content flex-panel-parent">*@
+            @*<div class="modal-header">*@
+                @*<button type="button" class="close" (click)="lgModal.hide()" aria-label="Close">*@
+                    @*<span aria-hidden="true">&times;</span>*@
+                @*</button>*@
+                @*<h4 class="modal-title">Select / Configure Processor</h4>*@
+            @*</div>*@
+            @*<div class="modal-body flex-panel flex-panel-parent">*@
+                @*<div class="inner-addon right-addon p-search padding">*@
+                    @*<i class="fa fa-search" aria-hidden="true"></i>*@
+                    @*<input type="text" pInputText class="form-control p-search" />*@
+                @*</div>*@
+                @*<div class="flex-row-parent flex-panel">*@
+                    @*<div class="flex-panel-30 padding flex-panel-parent" >*@
+                        @*<p-listbox [options]="processors" [(ngModel)]="selectedProcessor" class="flex-panel hfill" [style]="{'width':'100%', 'height':'100%'}"></p-listbox>*@
+                    @*</div>*@
+                    @*<div class="flex-panel-70 padding well well-lg flex-panel-parent">*@
+                        @*<configure-processor class="flex-panel hfill" ></configure-processor>*@
+                    @*</div>*@
+                @*</div>*@
+            @*</div>*@
+            @*<div >*@
+                @*<p-toolbar >*@
+                    @*<div class="ui-toolbar-group-left" >*@
+                        @*<button pButton type="text" label="Add" icon="fa-plus" (click)="addProcessor()" [disabled]="!isProcessorSelected()"></button>*@
+                    @*</div>*@
+                @*</p-toolbar>*@
+            @*</div>*@
+        @*</div>*@
+    @*</div>*@
+@*</div>*@
