--- a/app/views/partials/visualise/vistabs.scala.html
+++ b/app/views/partials/visualise/vistabs.scala.html
@@ -1,19 +1,19 @@
 @()
-<div class="fill">
-    <tabset class="flex-panel-parent">
-        <tab  class="flex-panel-parent" *ngFor="let tabz of uiStateStore.store.visTabs"
-        [heading]="tabz.visType"
-        [active]="tabz.active"
-        (select)="tabz.active = true"
-        (deselect)="tabz.active = false"
-        [disabled]="tabz.disabled"
-        [removable]="true"
-        (removed)="removeTabHandler(tabz)">
-            <div class="flex-panel flex-panel-parent" [ngSwitch]="tabz.visType">
-                <map class="flex-panel" [reload]= "provenances | async" [resize]= "uiStateStore.resizeView | async" *ngSwitchCase="'map'"></map>
-                <chart class="flex-panel overflow" [reload]= "provenances | async" *ngSwitchCase="'chart'"></chart>
-            </div>
-        </tab>
-    </tabset>
-</div>
+@*<div class="fill">*@
+    @*<tabset class="flex-panel-parent">*@
+        @*<tab  class="flex-panel-parent" *ngFor="let tabz of uiStateStore.store.visTabs"*@
+        @*[heading]="tabz.visType"*@
+        @*[active]="tabz.active"*@
+        @*(select)="tabz.active = true"*@
+        @*(deselect)="tabz.active = false"*@
+        @*[disabled]="tabz.disabled"*@
+        @*[removable]="true"*@
+        @*(removed)="removeTabHandler(tabz)">*@
+            @*<div class="flex-panel flex-panel-parent" [ngSwitch]="tabz.visType">*@
+                @*<map class="flex-panel" [reload]= "provenances | async" [resize]= "uiStateStore.resizeView | async" *ngSwitchCase="'map'"></map>*@
+                @*<chart class="flex-panel overflow" [reload]= "provenances | async" *ngSwitchCase="'chart'"></chart>*@
+            @*</div>*@
+        @*</tab>*@
+    @*</tabset>*@
+@*</div>*@
 
