--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -19,27 +19,27 @@ html, body {
 
 .flex-box.container-column {
   -webkit-flex-flow: column nowrap;
-  flex-flow: column nowrap;  
+  flex-flow: column nowrap;
 }
 
-.flex-box.container-row {  
+.flex-box.container-row {
   -webkit-flex-flow: row nowrap;
-  flex-flow: row nowrap;  
+  flex-flow: row nowrap;
 }
 
-.flex-item {  
-  background: white;  
+.flex-item {
+  background: white;
   margin: 0;
   padding: 0;
 
-  color: black;  
+  color: black;
   font-size: 20px;
   text-align: left;
 
   -webkit-box-flex: 1;
   -webkit-flex: 1;
   -ms-flex: 1;
-  flex: 1 ;   
+  flex: 1 ;
 }
 
 .card-block {
@@ -64,15 +64,15 @@ html, body {
 }
 
 .btn {
-    background:transparent;
-    border:none;
-    box-shadow:none;    
+  background:transparent;
+  border:none;
+  box-shadow:none;
 }
 
 
 .grabber {
   border: 0;
-  background: white;  
+  background: white;
 }
 
 .grabber.column {
@@ -91,8 +91,8 @@ html, body {
 
 .nav-tabs > li > a
 {
-    padding-top: 1px;
-    padding-bottom: 1px;
+  padding-top: 1px;
+  padding-bottom: 1px;
 }
 
 
@@ -351,11 +351,11 @@ html, body {
 
 
 /*#map {*/
-  /*position: absolute;*/
-  /*top: 0;*/
-  /*bottom: 0;*/
-  /*left: 0;*/
-  /*right: 0;*/
+/*position: absolute;*/
+/*top: 0;*/
+/*bottom: 0;*/
+/*left: 0;*/
+/*right: 0;*/
 /*}*/
 
 .relative {
@@ -368,7 +368,7 @@ html, body {
 }
 
 split-gutter {
-  background: white;
+  color: white;
 }
 
 .overlay {
@@ -389,9 +389,14 @@ split-gutter {
   overflow-x: auto;
 }
 
+.entity-list-box {
+  width:250px;
+  height:400px;
+  max-height:400px;
+}
+
 .ui-tabview {
   width: 1000px;
-
 }
 
 
