--- a/app/views/partials/flowentity.scala.html
+++ b/app/views/partials/flowentity.scala.html
@@ -1,12 +1,13 @@
 @()
-<div class="fill flex-row-parent">
+
+<div class="flex-row-parent" >
     <div class="flex-panel-30">
-        <p-listbox [options]="entities" [(ngModel)]="selectedEntity"  [style]="{'width':'190px','max-height':'300px'}"></p-listbox>
+        <p-listbox [options]="entities" [(ngModel)]="selectedEntity"  filter="filter" [style]="{'width':'250px','height':'400px','max-height':'400px'}"></p-listbox>
     </div>
     <div class="flex-panel-70">
         <div class="entity-tab-view">
             <p-tabView class="fill">
-                <p-tabPanel  header="Header 1">
+                <p-tabPanel  header="Description">
                     Content 1
                 </p-tabPanel>
                 <p-tabPanel  header="Header 2">
@@ -29,12 +30,9 @@
     </div>
 </div>
 
-@*<div class="flex-row-parent">*@
-@*<div class="flex-panel-30 padding flex-panel-parent" >*@
-@*<p-listbox [options]="processors" [(ngModel)]="selectedProcessor" class="flex-panel hfill" [style]="{'width':'100%', 'height':'100%'}"></p-listbox>*@
-@*</div>*@
-@*<p-listbox class="flex-panel-30" [options]="entities" [(ngModel)]="selectedEntity"></p-listbox>*@
-@*<div class="flex-panel-70 padding well well-lg flex-panel-parent">*@
-@*<configure-processor class="flex-panel hfill" ></configure-processor>*@
-@*</div>*@
-@*</div>*@
+<p-footer>
+    <div class="ui-dialog-buttonpane ui-widget-content ui-helper-clearfix">
+        <button pButton type="button" label="Add"></button>
+    </div>
+</p-footer>
+
