--- a/app/views/partials/flowentity.scala.html
+++ b/app/views/partials/flowentity.scala.html
@@ -22,7 +22,7 @@
                 <p-tabPanel
                 *ngFor="let fieldGroup of selectedEntityFieldGroups; let select = first"
                 [header]="fieldGroup.label"
-                [selected]="select">
+                selected="true">
                     <flow-entity-info [entityFieldGroup]="fieldGroup"></flow-entity-info>
                 </p-tabPanel>
             </p-tabView>
