--- a/app/views/partials/layout.scala.html
+++ b/app/views/partials/layout.scala.html
@@ -11,7 +11,7 @@
         </split>
     </split-area>
     <split-area>
-        <ws-view name="analyse" ></ws-view>
+        <ws-view [name]="uiId.ANALYSE" ></ws-view>
     </split-area>
 </split>
 
