--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -96,7 +96,7 @@ html, body {
 }
 
 
-.fill  {
+.fill, .ui-tabview-panel  {
   width: 100%;
   height: 100%;
 }
@@ -191,7 +191,7 @@ html, body {
   overflow:auto;
 }
 
-.flex-panel, .ui-panel, .ui-panel-content-wrapper, .ui-panel-content, .ui-tabview-panels, .ui-tabview  {
+.flex-panel, .ui-panel, .ui-panel-content-wrapper, .ui-panel-content, .ui-tabview-panels, .ui-tabview.   {
   -webkit-box-flex: 1;
   -webkit-flex: 1;
   -ms-flex: 1;
@@ -395,13 +395,15 @@ html, body {
   overflow-y: auto
 }
 
-.ui-tabview {
-  width: 500px;
-}
+/*.ui-tabview {*/
+  /*width: 500px;*/
+/*}*/
 
 .fa-exclamation-circle {
   color:red;
 }
+
+
 
 
 
