--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -96,7 +96,7 @@ html, body {
 }
 
 
-.fill, .ui-tabview-panel  {
+.fill  {
   width: 100%;
   height: 100%;
 }
@@ -171,7 +171,7 @@ html, body {
   height:100%;
 }
 
-.flex-panel-parent, .ui-panel, .ui-panel-content-wrapper, .ui-panel-content, .ui-tabview-panels, .ui-tabview {
+.flex-panel-parent, .ui-panel, .ui-panel-content-wrapper, .ui-panel-content, .ui-tabview-panels, .ui-tabview, .ui-tabview-panel {
   width: 100%;
   height: 100%;
   display:-webkit-flex;
@@ -191,7 +191,7 @@ html, body {
   overflow:auto;
 }
 
-.flex-panel, .ui-panel, .ui-panel-content-wrapper, .ui-panel-content, .ui-tabview-panels, .ui-tabview.   {
+.flex-panel, .ui-panel, .ui-panel-content-wrapper, .ui-panel-content {
   -webkit-box-flex: 1;
   -webkit-flex: 1;
   -ms-flex: 1;
@@ -283,15 +283,15 @@ html, body {
 
 }
 
-.btn.red {
+.red {
   color:red
 }
 
-.btn.green {
+.green {
   color:green
 }
 
-.btn.black {
+.black {
   color:black
 }
 
@@ -395,9 +395,6 @@ html, body {
   overflow-y: auto
 }
 
-/*.ui-tabview {*/
-  /*width: 500px;*/
-/*}*/
 
 .fa-exclamation-circle {
   color:red;
