--- a/app/views/partials/layout.scala.html
+++ b/app/views/partials/layout.scala.html
@@ -3,10 +3,10 @@
     <split-area>
         <split direction="vertical">
             <split-area>
-                <p>Lorem ipsum dolor sit amet...</p>
+                <ws-view [name]="uiId.VISUALISE" ></ws-view>
             </split-area>
             <split-area>
-                <p>... consectetur adipiscing elit, sed do eiusmod tiam, ...</p>
+                <ws-view [name]="uiId.MOBILISE" ></ws-view>
             </split-area>
         </split>
     </split-area>
