--- a/app/views/partials/analyse/flowtabs.scala.html
+++ b/app/views/partials/analyse/flowtabs.scala.html
@@ -3,7 +3,7 @@
 <div class="fill">
     <p-tabView class="fill" (onChange)="selectActiveTab($event.index)">
         @*Workaround for https://github.com/primefaces/primeng/issues/2000*@
-        <p-tabPanel class="fill" *ngIf="uiStateStore.hasNoTabs"
+        <p-tabPanel class="fill" *ngIf="uiStateStore.store.flowTabs.length === 0"
         header="..."
         selected="true">
             Instantiate flow from template or create a new flow
