--- a/app/views/partials/wsview.scala.html
+++ b/app/views/partials/wsview.scala.html
@@ -25,8 +25,8 @@
         </div>
     </p-header>
     <div class="flex-panel fill" [ngSwitch]="name">
-        <visualise class="flex-panel-parent" *ngSwitchCase="'visualise'"></visualise>
-        <mobilise class="flex-panel-parent" *ngSwitchCase="'mobilise'"></mobilise>
+        <visualise *ngSwitchCase="'visualise'"></visualise>
+        <mobilise *ngSwitchCase="'mobilise'"></mobilise>
         <analyse  *ngSwitchCase="'analyse'"></analyse>
     </div>
 </p-panel>
