--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -113,8 +113,7 @@ html, body {
 }
 
 .mobilise {
-
-  overflow: hidden;
+  overflow: hidden ;
 }
 
 
@@ -367,8 +366,8 @@ html, body {
 }
 
 #map {
-  width: 2000px;
-  height: 800px;
+  width: 100%;
+  height: 100%;
 }
 
 #chart {
