--- a/app/views/partials/wsview.scala.html
+++ b/app/views/partials/wsview.scala.html
@@ -2,7 +2,38 @@
 <p-panel >
     <p-header >
         <div >
-            <span class="ui-panel-title">{{name}}</span>
+            <span class="ui-panel-title pull-left">{{name}}</span>
+            <div class="btn-group btn-group-sm pull-left">
+                <button
+                type="button"
+                class="btn btn-secondary"
+                (click)="uiStateStore.makeViewVisible(uiId.VISUALISE)"
+                [hidden]="(uiStateStore.viewsVisible | async).visualise">
+                    <i class="fa fa-file-image-o" aria-hidden="true"></i>
+                </button>
+                <button
+                type="button"
+                class="btn btn-secondary"
+                (click)="uiStateStore.makeViewVisible(uiId.MOBILISE)"
+                [hidden]="(uiStateStore.viewsVisible | async).mobilise">
+                    <i class="fa fa-table" aria-hidden="true"></i>
+                </button>
+                <button
+                type="button"
+                class="btn btn-secondary"
+                (click)="uiStateStore.makeViewVisible(uiId.ANALYSE)"
+                [hidden]="(uiStateStore.viewsVisible | async).analyse">
+                    <i class="fa fa-sitemap" aria-hidden="true"></i>
+                </button>
+            </div>
+            <div class="btn-group btn-group-sm pull-right">
+                <button
+                type="button"
+                class="btn btn-secondary"
+                (click)="maximiseView($event, name)">
+                    <i class="fa fa-window-maximize" aria-hidden="true"></i>
+                </button>
+            </div>
             <div *ngIf="contextStore.contextMenuObs(name) | async as items"
             class="btn-group btn-group-sm pull-right">
                 <p-menu #menu  appendTo="body" popup="popup" [model]="items"></p-menu>
@@ -15,7 +46,7 @@
             </div>
             <div *ngFor="let cbItem of contextStore.contextBarObs(name) | async"
             class="btn-group btn-group-sm pull-right">
-                <button *ngIf="!uiStateStore.hasNoTabs"
+                <button *ngIf="uiStateStore.store.flowTabs.length > 0"
                 class="btn btn-secondary"
                 (click)="cbItem.command($event)"
                 [disabled]="!cbItem.enabled">
